2004-09-29  Pascal Obry  <pascal@obry.org>

	* makefile:
	(BUILD): New variable only set on Windows platforms.
	(build): Use it.
	
2004-09-29  Pascal Obry  <pascal@obry.org>

	* makefile:
	(SUPPORT): New variable only set on Windows platforms. Fix build
	 failure on non Windows OS.
	(setup): Use it.

	* win32.gpr:
	(Library_Name): Put into Windows_NT specific section.
	(Library_Kind): Idem.

2004-09-29  Pascal Obry  <pascal@obry.org>

	* win32.gpr:
	Initial revision.	

	* crypto.def, ssl.def:
	Initial revision.
	We do not need the dll2def tool now.

	* makefile:
	Extensive changes to support build based on GNAT Project files.
	The makefile based build has been removed.
	Remove definition file generation.

2004-09-23  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* gai_strerror.c:
	Simple thread safe gai_strerror for Win32.

	* makefile:
	Concatenate libpoll.a and libwspiapi.a into libaws-win32.a and add
	gai_strerror.o there.

	* libeay32.dll, libssl32.dll:
	Remove debug information.

2004-09-21  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wspiapi.c:
	(WSPIAPI_init): New routine.

2004-09-20  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* libeay32.dll, libssl32.dll:
	DLL updated to OpenSSL version 0.9.7d, build under Mingw GCC 3.4.1.

2004-09-17  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wspiapi.h:
	Remove DOS CR at end of lines.

2004-09-16  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wspiapi.h:
	Microsoft header file for emulate protocol independent API functions
	 if necessary. Need for support Windows 2000.

	* wspiapi.c:
	Need to compile wspiapi.h to object file.

	* makefile:
	Build libwspiapi.a.

2004-09-04  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* poll.adb:
	Use AWS.Net.Thin instead of AWS.Net.Sets.Thin.

2004-07-23  Pascal Obry  <pascal@obry.org>

	* poll.ads:
	Use definitions from AWS.OS_Lib.Definitions.
	Fix header.

	* poll.adb:
	Use definitions from AWS.OS_Lib.Definitions.
	Add comments.
	Fix header.

2004-07-07  Pascal Obry  <pascal@obry.org>
